--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -1,90 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation android:id="@+id/main_nav"
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	app:startDestination="@id/mealOverviewFragment">
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_nav"
+    app:startDestination="@id/mealOverviewFragment">
 
-	<fragment
-			android:id="@+id/mealOverviewFragment"
-			android:name="de.nicidienase.geniesser_app.ui.overview.MenuOverviewFragment"
-			android:label="Genuss &amp; Harmonie"
-			tools:layout="@layout/fragment_meal_overview">
-		<action
-				android:id="@+id/action_mealOverviewFragment_to_dishDetailFragment"
-				app:destination="@id/dishDetailFragment"
-				app:enterAnim="@anim/nav_default_enter_anim"
-				app:exitAnim="@anim/nav_default_exit_anim"
-				app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-				app:popExitAnim="@anim/nav_default_pop_exit_anim" />
-	</fragment>
-	<fragment
-		android:id="@+id/locationSelectFragment"
-		android:name="de.nicidienase.geniesser_app.ui.location.LocationSelectFragment"
-		android:label="Standortauswahl"
+    <fragment
+        android:id="@+id/mealOverviewFragment"
+        android:name="de.nicidienase.geniesser_app.ui.overview.MenuOverviewFragment"
+        android:label="Genuss &amp; Harmonie"
+        tools:layout="@layout/fragment_meal_overview">
+        <action
+            android:id="@+id/action_mealOverviewFragment_to_dishDetailFragment"
+            app:destination="@id/dishDetailFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
+    <fragment
+        android:id="@+id/locationSelectFragment"
+        android:name="de.nicidienase.geniesser_app.ui.location.LocationSelectFragment"
+        android:label="Standortauswahl"
+        tools:layout="@layout/fragment_select_locations" />
+    <fragment
+        android:id="@+id/dishDetailFragment"
+        android:name="de.nicidienase.geniesser_app.ui.detail.DishDetailFragment"
+        android:label="{title}"
+        tools:layout="@layout/fragment_dish_detail">
+        <argument
+            android:name="dish"
+            app:argType="de.nicidienase.geniesser_app.data.Dish" />
+        <argument
+            android:name="title"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/newsListFragment"
+        android:name="de.nicidienase.geniesser_app.ui.news.NewsListFragment"
+        android:label="News"
+        tools:layout="@layout/fragment_news">
+        <action
+            android:id="@+id/action_newsListFragment_to_newsDetailFragment"
+            app:destination="@id/newsDetailFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
+    <fragment
+        android:id="@+id/newsDetailFragment"
+        android:name="de.nicidienase.geniesser_app.ui.news.NewsDetailFragment"
+        android:label="News"
+        tools:layout="@layout/fragment_news_detail">
+        <argument
+            android:name="item"
+            app:argType="de.nicidienase.geniesser_app.data.News" />
+    </fragment>
+    <fragment
+        android:id="@+id/prefFragment"
+        android:name="de.nicidienase.geniesser_app.ui.preferences.PreferencesFragment"
+        android:label="Preferences">
+        <action
+            android:id="@+id/action_prefFragment_to_locationSelectFragment"
+            app:destination="@id/locationSelectFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        <action
+            android:id="@+id/action_prefFragment_to_outletSelectFragment"
+            app:destination="@id/outletSelectFragment" />
+        <action
+            android:id="@+id/action_prefFragment_to_qrInfoFragment"
+            app:destination="@id/qrInfoFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/fcCampusOverviewFragment"
+        android:name="de.nicidienase.geniesser_app.ui.fccampus.FcOverviewFragment"
+        android:label="FC-Café"
+        tools:layout="@layout/fragment_fc_overview">
+        <action
+            android:id="@+id/action_fcCampusOverviewFragment_to_fcMealTimesFragment"
+            app:destination="@id/fcMealTimesFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/outletSelectFragment"
+        android:name="de.nicidienase.geniesser_app.ui.outlet.OutletSelectFragment"
+        android:label="Filialauswahl"
+        tools:layout="@layout/fragment_select_locations" />
+    <fragment
+        android:id="@+id/qrInfoFragment"
+        android:name="de.nicidienase.geniesser_app.ui.preferences.qr.QrInfoFragment"
+        android:label="QR-Codes"
 		tools:layout="@layout/fragment_select_locations" />
-	<fragment
-		android:id="@+id/dishDetailFragment"
-		android:name="de.nicidienase.geniesser_app.ui.detail.DishDetailFragment"
-		android:label="{title}"
-		tools:layout="@layout/fragment_dish_detail" >
-		<argument
-			android:name="dish"
-			app:argType="de.nicidienase.geniesser_app.data.Dish" />
-		<argument
-			android:name="title"
-			app:argType="string" />
-	</fragment>
-	<fragment
-		android:id="@+id/newsListFragment"
-		android:name="de.nicidienase.geniesser_app.ui.news.NewsListFragment"
-		android:label="News"
-		tools:layout="@layout/fragment_news">
-		<action
-			android:id="@+id/action_newsListFragment_to_newsDetailFragment"
-			app:destination="@id/newsDetailFragment"
-			app:enterAnim="@anim/nav_default_enter_anim"
-			app:exitAnim="@anim/nav_default_exit_anim"
-			app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-			app:popExitAnim="@anim/nav_default_pop_exit_anim" />
-	</fragment>
-	<fragment
-		android:id="@+id/newsDetailFragment"
-		android:name="de.nicidienase.geniesser_app.ui.news.NewsDetailFragment"
-		android:label="News"
-		tools:layout="@layout/fragment_news_detail">
-		<argument
-			android:name="item"
-			app:argType="de.nicidienase.geniesser_app.data.News" />
-	</fragment>
-	<fragment
-		android:id="@+id/prefFragment"
-		android:name="de.nicidienase.geniesser_app.ui.preferences.PreferencesFragment"
-		android:label="Preferences">
-		<action
-			android:id="@+id/action_prefFragment_to_locationSelectFragment"
-			app:destination="@id/locationSelectFragment"
-			app:enterAnim="@anim/nav_default_enter_anim"
-			app:exitAnim="@anim/nav_default_exit_anim"
-			app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-			app:popExitAnim="@anim/nav_default_pop_exit_anim"  />
-		<action
-				android:id="@+id/action_prefFragment_to_outletSelectFragment"
-				app:destination="@id/outletSelectFragment" />
-		<action
-				android:id="@+id/action_prefFragment_to_qrInfoFragment"
-				app:destination="@id/qrInfoFragment" />
-	</fragment>
-	<fragment
-			android:id="@+id/fcCampusOverviewFragment"
-			android:name="de.nicidienase.geniesser_app.ui.fccampus.FcOverviewFragment"
-			android:label="FC-Café" />
-	<fragment
-			android:id="@+id/outletSelectFragment"
-			android:name="de.nicidienase.geniesser_app.ui.outlet.OutletSelectFragment"
-			android:label="Filialauswahl" />
-	<fragment
-			android:id="@+id/qrInfoFragment"
-			android:name="de.nicidienase.geniesser_app.ui.preferences.qr.QrInfoFragment"
-			android:label="QrInfoFragment" />
+    <fragment
+        android:id="@+id/fcMealTimesFragment"
+        android:name="de.nicidienase.geniesser_app.ui.fccampus.mealtimes.FcMealTimesFragment"
+        android:label="FC-Café Essenszeiten" />
 </navigation>
