--- a/app/src/main/res/layout/item_fc_dish.xml
+++ b/app/src/main/res/layout/item_fc_dish.xml
@@ -19,12 +19,26 @@
             android:background="?attr/selectableItemBackground">
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/categoryText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@color/colorPrimary"
+            android:textColor="@android:color/white"
+            android:gravity="center_horizontal"
+            android:text="@{dish.category}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Hauptgericht" />
+
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/nameText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
             android:ellipsize="end"
             android:maxLines="4"
             android:singleLine="false"
@@ -35,8 +49,8 @@
             app:layout_constraintEnd_toStartOf="@+id/priceText"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.284"
+            app:layout_constraintTop_toBottomOf="@id/categoryText"
+            app:layout_constraintVertical_bias="0"
             tools:text="Knuspriger Schweinekrustenbraten mit Senf und Kümmel, Weißkrautgemüse und hausgemachten Eierspätzle" />
 
         <androidx.appcompat.widget.AppCompatTextView
